--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<h1>Kinga Szyszka</h1>
 				<p>Thank you for your interest. Please see the list of my projects on the right. Some of them are still being developed. I am happy to talk about possible cooperation:</p>
 				<a href="https://github.com/szalala"> <i class="fab fa-github-square"></i></a> 
-				<a href="https://www.linkedin.com/in/kinga-szyszka-4806b999/"> <i class="fab fa-linkedin"></i></i></a>
+				<a href="https://www.linkedin.com/in/kinga-szyszka-4806b999/"> <i class="fab fa-linkedin"></i></a>
+				<a href="http://www.ladypinecone.pl/"><i class="fab fa-wordpress"></i></a>
 			</div>
 
 			<div class="col right">
